0.12
    Bug Fixes
    * Stole some code from MooseX::Method::Signatures to make attributes
      parse better.

    Other
    - Repository moved to github.


0.11  Sat Sep 27 16:47:51 EDT 2008
    New Features
    * Added the "$arg!" required syntax (currently does nothing)
    * Attributes now work (thanks to mst)

    New Docs
    - Documented how to set a trait and a default
    * Document that earlier params may be used in defaults.
    * Document that @_ is left intact
    * Clarify aliased ref behavior
    * Document anonymous methods

    Bug Fixes
    * Protect against complicated default expressions


0.10  Sun Sep 21 20:04:41 PDT 2008
    New Features
    * Added "$class:" change the invocant a la Perl 6.
    * Added "$arg = EXPR" to set defaults.
    * Added "$arg?" optional param syntax (currently does nothing)
    * Added "$arg is foo" param traits (currently does nothing)
    * Expose a way to play with the prototype handler.

    Doc Fixes
    - Change "prototype" to "signature" to avoid confusion with Perl's
      built in prototypes.


0.05  Sun Sep 21 15:17:16 PDT 2008
    Bug Fixes
    * methods now get the right name in caller(), not "Class::__ANON__".
    * The \@foo prototype no longer has a performance hit
    * Closures now work with \@foo
      (All the above thanks to Matthijs van Duin and his Sub::Name and
       Data::Alias)

    Test Fixes
    * Not rigorously checking the bitmask and hints flags from caller() as
      their behavior is undefined.  This fixes the 5.10 test failures.


0.04  Sun Sep 21 13:52:29 PDT 2008
    New Features
    * A \@foo protototype allows you to use a reference as a regular var

    New Docs
    * Documented the @_ prototype


0.03  Sun Sep 21 00:57:32 PDT 2008
    New Features
    * Eliminate the need of the trailing semicolon

    New Bugs
    * The debugger and one-liners are broken

    New Docs
    * Better prototype docs


0.02  Wed Dec 26 02:07:26 PST 2007
    Doc Fix