@@ -1,4 +1,8 @@
 0.12
+    New Features
+    * Added "is alias"
+    * Multiple traits supported "is copy is rw"
+
     Bug Fixes
     * Stole some code from MooseX::Method::Signatures to make attributes
       parse better.
